--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,14 +1,25 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: "References"
+permalink: /references/
 author_profile: true
 ---
 
-{% include base_path %}
+Prof. [Jesús M. Carro](http://www.eco.uc3m.es/~jcarro/) (Main Advisor) 
+Department of Economics
+University Carlos III of Madrid 
+Getafe, Spain 
+jcarro[at]eco.uc3m.es
 
+Prof. [Jan Stuhler](https://janstuhler.com)
+Department of Economics
+University Carlos III of Madrid 
+Getafe, Spain 
+jan.stuhler[at]uc3m.es
 
-{% for post in site.portfolio %}
-  {% include archive-single.html %}
-{% endfor %}
+Prof. [Juan J. Dolado](http://dolado.blogspot.com) 
+Department of Economics
+University Carlos III of Madrid 
+Getafe, Spain 
+dolado[at]eco.uc3m.es
 
