--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,8 +1,8 @@
 ---
-layout: archive
-title: "References"
-permalink: /references/
+title: ""
+excerpt: "References"
 author_profile: true
+permalink: /references/
 ---
 
 Prof. [Jesús M. Carro](http://www.eco.uc3m.es/~jcarro/) (Main Advisor) 
