--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,8 +1,8 @@
 ---
 title: ""
-excerpt: "References"
+excerpt: "portfolio"
 author_profile: true
-permalink: /references/
+permalink: /portfolio/
 ---
 
 
